server/public/css/styles.css
nav.navBarCourse {
  padding: 0 72px; }
  nav.navBarCourse ul {
    display: flex;
    height: 70px;
    list-style-type: none;
    justify-content: flex-start;
    flex-direction: row-reverse;
    align-items: center; }
  nav.navBarCourse li {
    height: 50px;
    line-height: 50px;
    margin: 0 30px; }
  nav.navBarCourse a {
    text-decoration: none;
    list-style-type: none;
    color: black;
    font-family: 'Lato', sans-serif; }
  nav.navBarCourse .circle {
    margin: 0 4.8px; }

.course-page section.non-nav {
  display: flex;
  justify-content: center; }

.course-page .side-bar {
  width: 250px;
  height: 479px;
  overflow: scroll;
  margin-right: 30px;
  margin-top: 10px; }

.course-page ul {
  list-style-type: none; }

.course-page li {
  display: flex;
  justify-content: space-around;
  align-items: center;
  align-content: center;
  margin-bottom: 30px;
  border-bottom: 4px grey;
  border-bottom-style: inset;
  background-color: #71cad0;
  border-radius: 500px;
  padding: 10px;
  color: white;
  font-family: 'Lato', sans-serif; }

.course-page a {
  font-family: 'Lato', sans-serif; }

.course-page .temperature {
  width: 40px;
  height: 479px;
  margin-left: 30px;
  border-radius: 500px;
  border-bottom: 4px solid grey;
  border-bottom-style: inset;
  background: #184947; }

.course-page #question {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 100px;
  background-color: rgba(121, 201, 210, 0.5);
  border-radius: 500px; }

.course-page button {
  height: 50px;
  width: auto;
  padding-left: 10px;
  padding-right: 10px;
  min-width: 100px;
  border-radius: 500px;
  font-size: 18px;
  background-color: #130f2e;
  border: none;
  color: white;
  border-bottom: 4px grey;
  border-bottom-style: inset;
  font-family: 'Lato', sans-serif; }

.course-page section.profile-card {
  height: 300px;
  width: 300px;
  margin-left: 100px;
  text-align: center;
  float: left; }

.course-page section.profile-information {
  margin-left: 60px; }

.course-page h3 {
  margin-bottom: 20px;
  font-family: 'Lato', sans-serif; }

.course-page p {
  font-family: 'Lato', sans-serif; }

.course-page section.courses-in-progress {
  float: right;
  display: flex;
  justify-content: center;
  margin-right: 120px; }

.course-page ul {
  list-style-type: none;
  margin-right: 40px; }

.course-page li a {
  text-decoration: none;
  list-style-type: none;
  color: black;
  font-family: 'Lato', sans-serif; }

.course-page img {
  margin-left: 30px;
  border-radius: 500px; }

.home-page {
  /*nav*/
  /*header*/
  /*video*/ }
  .home-page .container {
    height: 1000px;
    width: auto;
    font-size: 18px;
    background-color: white;
    font-family: 'Lato', sans-serif; }
  .home-page nav.navBar,
  .home-page header.surge-main,
  .home-page section.surge-courses {
    padding: 0 72px; }
  .home-page nav ul {
    position: relative;
    z-index: 2;
    height: 70px;
    display: flex;
    list-style-type: none;
    justify-content: flex-start;
    flex-direction: row-reverse;
    align-items: center;
    padding: 0 72px;
    width: auto; }
  .home-page nav ul li {
    position: relative;
    z-index: 3;
    height: 50px;
    line-height: 50px;
    margin: 0 30px;
    text-decoration: none;
    list-style-type: none; }
  .home-page a {
    text-decoration: none;
    list-style-type: none;
    color: black;
    font-family: 'Lato', sans-serif; }
  .home-page .surge-main {
    height: 400px;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 70px; }
  .home-page video {
    z-index: 1;
    width: auto;
    height: auto;
    position: fixed;
    left: 0;
    bottom: 0; }
  .home-page .overlay {
    position: relative;
    z-index: 5;
    height: 300px;
    width: 330px;
    color: white;
    margin-top: 15%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: rgba(0, 0, 0, 0.5);
    font-family: 'Lato', sans-serif; }
  .home-page #sign-up {
    margin-top: 80px;
    height: 50px;
    width: 150px;
    border-radius: 500px;
    font-size: 18px;
    background-color: #4fc4b1;
    border: none;
    color: white; }

